--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"@biomejs/biome": "1.9.4",
 		"@types/node": "^22.10.3",
 		"typescript": "^5.7.3"
+	},
+	"dependencies": {
+		"node-pty": "^1.0.0"
 	}
 }
