--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"format": "biome format --write",
 		"lint": "biome lint --write",
 		"check": "biome check",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "vitest --run",
+		"test:watch": "vitest --watch",
+		"test:coverage": "vitest --coverage"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,8 +24,14 @@
 	"packageManager": "pnpm@10.11.0",
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
 		"@types/node": "^22.10.3",
-		"typescript": "^5.7.3"
+		"@vitest/ui": "^3.2.3",
+		"ink-testing-library": "^4.0.0",
+		"jsdom": "^26.1.0",
+		"typescript": "^5.7.3",
+		"vitest": "^3.2.3"
 	},
 	"dependencies": {
 		"@types/react": "^19.1.8",
